--- a/index.html
+++ b/index.html
@@ -1,164 +1,50 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
-<link as="style" href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&amp;family=Inter:wght@400&amp;family=Montserrat:wght@400&amp;family=Fredoka:wght@400&amp;family=Comic+Neue:wght@400&amp;display=swap" onload="this.rel='stylesheet'" rel="stylesheet"/>
-<title>Crackit! - Your Brain's Playground</title>
-<link href="data:image/x-icon;base64," rel="icon" type="image/x-icon"/>
-<script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-<style type="text/tailwindcss">
-        :root {
-          --white: #FFFFFF;
-          --electric-blue: #00BFFF;
-          --deep-navy: #1A1A2E;
-          --vivid-purple: #8A2BE2;
-          --deep-navy-text: #1A1A2E;
-          --bright-orange: #FF8C00;
-          --sunflower-yellow: #FFD700;
-        }
-        body {
-          font-family: 'Inter', 'Montserrat', sans-serif;
-          background-color: var(--deep-navy);
-          color: var(--white);
-        }
-        h1,
-        h2,
-        h3,
-        h4,
-        h5,
-        h6 {
-          font-family: 'Poppins', sans-serif;
-          font-weight: 700;
-        }
-        .callout {
-          font-family: 'Fredoka', 'Comic Neue', cursive;
-        }
-        .hero-bg {
-          background-color: var(--deep-navy);
-          position: relative;
-          overflow: hidden;
-        }
-        .hero-bg::before {
-          content: '';
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          width: 200%;
-          height: 200%;
-          transform: translate(-50%, -50%);
-          background-image:
-            radial-gradient(circle at 50% 50%, var(--vivid-purple) 0%, transparent 40%);
-          opacity: 0.1;
-          z-index: 0;
-        }
-        .hero-content {
-          position: relative;
-          z-index: 1;
-        }
-        .pulsating-glow {
-          animation: pulsating-glow 3s infinite ease-in-out;
-        }
-        @keyframes pulsating-glow {
-          0%,
-          100% {
-            filter: drop-shadow(0 0 10px var(--electric-blue)) drop-shadow(0 0 20px var(--vivid-purple));
-          }
-          50% {
-            filter: drop-shadow(0 0 20px var(--bright-orange)) drop-shadow(0 0 30px var(--sunflower-yellow));
-          }
-        }
-        .crackit-text span {
-          display: inline-block;
-          animation: fluid-text 2.5s infinite ease-in-out;
-        }
-        .crackit-text span:nth-child(1) {
-          animation-delay: 0.1s;
-        }
-        .crackit-text span:nth-child(2) {
-          animation-delay: 0.2s;
-        }
-        .crackit-text span:nth-child(3) {
-          animation-delay: 0.3s;
-        }
-        .crackit-text span:nth-child(4) {
-          animation-delay: 0.4s;
-        }
-        .crackit-text span:nth-child(5) {
-          animation-delay: 0.5s;
-        }
-        .crackit-text span:nth-child(6) {
-          animation-delay: 0.6s;
-        }
-        .crackit-text span:nth-child(7) {
-          animation-delay: 0.7s;
-        }
-        .crackit-text span:nth-child(8) {
-          animation-delay: 0.8s;
-        }
-        @keyframes fluid-text {
-          0%,
-          100% {
-            transform: translateY(0) scale(1);
-          }
-          50% {
-            transform: translateY(-5px) scale(1.05);
-          }
-        }
-        .social-icon {
-          transition: transform 0.3s ease-in-out, color 0.3s ease-in-out;
-        }
-        .social-icon:hover {
-          transform: scale(1.1);
-          color: var(--sunflower-yellow);
-        }
-    </style>
-<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
-<link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" referrerpolicy="no-referrer" rel="stylesheet"/>
-<style>
-        body {
-          min-height: max(884px, 100dvh);
-        }
-    </style>
-<style>
-    body {
-      min-height: max(884px, 100dvh);
-    }
-  </style>
-<style>
-    body {
-      min-height: max(884px, 100dvh);
-    }
-  </style>
-<style>
-    body {
-      min-height: max(884px, 100dvh);
-    }
-  </style>
-<style>
-    body {
-      min-height: max(884px, 100dvh);
-    }
-  </style>
-<style>
-    body {
-      min-height: max(884px, 100dvh);
-    }
-  </style>
-  </head>
-<body class="bg-[var(--deep-navy)] text-[var(--white)]">
+<html lang="en">
+  
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Crackit! - Your Brain's Playground</title>
+  <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico" />
+
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Inter:wght@400&family=Montserrat:wght@400&family=Fredoka:wght@400&family=Comic+Neue:wght@400&display=swap" rel="stylesheet" />
+
+  <!-- Material Icons -->
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet" />
+
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="css/styles.css" />
+</head>
+
+
+<body class="bg-[var(--white)] text-[var(--deep-navy-text)]">
 <div class="relative flex size-full min-h-screen flex-col group/design-root overflow-x-hidden">
 <main class="flex-grow">
 <section class="hero-bg text-center py-24 px-6 flex flex-col items-center justify-center min-h-[70vh]">
 <div class="hero-content flex flex-col items-center space-y-10">
-<div class="relative w-56 h-56">
-<img alt="Abstract brain graphic" class="w-full h-full object-contain pulsating-glow" src="https://lh3.googleusercontent.com/aida-public/AB6AXuAz-_2l1JVRei8G2wP1Pgh3p73Qn_K9gEma3m5_9CG5mC6_y-QZTDOpnk7CZMEZJlHFAwqEzfhtly7H1EyKsh5F3gEqYEqqeTV7f3Q5NZZvTZPOPwp7OfbeKOwSxeDMJoJsH26Yz-hK3NppC5tU-i8K2KWHH1BBfEFqSIRTo7LoHc_g17acK7DzoUuNwzAS5HO58wMaDFejQZznod2FhK8NPA1rBxDyMfZPeW7aVziCT9QL7ddN4ostsineaqvAeTt83g1JxuX43A"/>
-</div>
+  <div class="relative w-56 h-56">
+    <img alt="Abstract brain graphic" class="w-full h-full object-contain pulsating-glow" src="assets\images\logo.png"/>
+  </div>
 <h1 class="text-7xl font-bold text-[var(--white)] crackit-text">
 <span class="text-[var(--electric-blue)]" style="text-shadow: -2px -2px 0 var(--vivid-purple), 2px -2px 0 var(--vivid-purple), -2px 2px 0 var(--vivid-purple), 2px 2px 0 var(--vivid-purple);">C</span><span class="text-[var(--electric-blue)]" style="text-shadow: -2px -2px 0 var(--vivid-purple), 2px -2px 0 var(--vivid-purple), -2px 2px 0 var(--vivid-purple), 2px 2px 0 var(--vivid-purple);">r</span><span class="text-[var(--electric-blue)]" style="text-shadow: -2px -2px 0 var(--viv id-purple), -2px 2px 0 var(--vivid-purple), 2px 2px 0 var(--vivid-purple);">a</span><span class="text-[var(--electric-blue)]" style="text-shadow: -2px -2px 0 var(--vivid-purple), 2px -2px 0 var(--vivid-purple), -2px 2px 0 var(--vivid-purple), 2px 2px 0 var(--vivid-purple);">c</span><span class="text-[var(--electric-blue)]" style="text-shadow: -2px -2px 0 var(--vivid-purple), 2px -2px 0 var(--vivid-purple), -2px 2px 0 var(--vivid-purple), 2px 2px 0 var(--vivid-purple);">k</span><span class="text-[var(--bright-orange)]" style="text-shadow: -2px -2px 0 var(--vivid-purple), 2px -2px 0 var(--vivid-purple), -2px 2px 0 var(--vivid-purple), 2px 2px 0 var(--vivid-purple);">i</span><span class="text-[var(--bright-orange)]" style="text-shadow: -2px -2px 0 var(--vivid-purple), 2px -2px 0 var(--vivid-purple), -2px 2px 0 var(--vivid-purple), 2px 2px 0 var(--vivid-purple);">t</span><span class="text-[var(--sunflower-yellow)]" style="text-shadow: -2px -2px 0 var(--vivid-purple), 2px -2px 0 var(--vivid-purple), -2px 2px 0 var(--vivid-purple), 2px 2px 0 var(--vivid-purple);">!</span>
 </h1>
-<p class="text-2xl text-[var(--white)] callout max-w-lg mx-auto">Playful, science-driven challenges to sharpen your logic and problem-solving skills.</p>
-<a class="mt-12 bg-[var(--sunflower-yellow)] text-[var(--deep-navy)] font-bold py-4 px-10 rounded-full text-xl transform transition-transform duration-300 ease-in-out shadow-lg hover:bg-[var(--bright-orange)] hover:scale-105" href="#community"> Join the WhatsApp Community </a>
+<p class="text-2xl text-[var(--deep-navy-text)] callout max-w-lg mx-auto">Playful, science-driven challenges to sharpen your logic and problem-solving skills.</p>
+  <div class="mt-12 flex flex-col sm:flex-row gap-6 justify-center">
+    <a class="bg-[var(--sunflower-yellow)] text-[var(--deep-navy)] font-bold py-4 px-10 rounded-full text-xl transform transition-transform duration-300 ease-in-out shadow-lg hover:bg-[var(--bright-orange)] hover:scale-105" href="#community">
+      Join the WhatsApp Community
+    </a>
+    <a class="bg-[var(--electric-blue)] text-white font-bold py-4 px-10 rounded-full text-xl transform transition-transform duration-300 ease-in-out shadow-lg hover:bg-[var(--vivid-purple)] hover:scale-105" href="#newsletter">
+      Subscribe to Newsletter
+    </a>
+  </div>
 </div>
 </section>
 <section class="py-16 px-6 bg-[var(--white)] text-[var(--deep-navy-text)]">
