--- a/index.html
+++ b/index.html
@@ -33,16 +33,13 @@
   <div class="relative w-56 h-56">
     <img alt="Abstract brain graphic" class="w-full h-full object-contain pulsating-glow" src="assets\images\logo.png"/>
   </div>
-<h1 class="text-7xl font-bold text-[var(--white)] crackit-text">
-<span class="text-[var(--electric-blue)]" style="text-shadow: -2px -2px 0 var(--vivid-purple), 2px -2px 0 var(--vivid-purple), -2px 2px 0 var(--vivid-purple), 2px 2px 0 var(--vivid-purple);">C</span><span class="text-[var(--electric-blue)]" style="text-shadow: -2px -2px 0 var(--vivid-purple), 2px -2px 0 var(--vivid-purple), -2px 2px 0 var(--vivid-purple), 2px 2px 0 var(--vivid-purple);">r</span><span class="text-[var(--electric-blue)]" style="text-shadow: -2px -2px 0 var(--viv id-purple), -2px 2px 0 var(--vivid-purple), 2px 2px 0 var(--vivid-purple);">a</span><span class="text-[var(--electric-blue)]" style="text-shadow: -2px -2px 0 var(--vivid-purple), 2px -2px 0 var(--vivid-purple), -2px 2px 0 var(--vivid-purple), 2px 2px 0 var(--vivid-purple);">c</span><span class="text-[var(--electric-blue)]" style="text-shadow: -2px -2px 0 var(--vivid-purple), 2px -2px 0 var(--vivid-purple), -2px 2px 0 var(--vivid-purple), 2px 2px 0 var(--vivid-purple);">k</span><span class="text-[var(--bright-orange)]" style="text-shadow: -2px -2px 0 var(--vivid-purple), 2px -2px 0 var(--vivid-purple), -2px 2px 0 var(--vivid-purple), 2px 2px 0 var(--vivid-purple);">i</span><span class="text-[var(--bright-orange)]" style="text-shadow: -2px -2px 0 var(--vivid-purple), 2px -2px 0 var(--vivid-purple), -2px 2px 0 var(--vivid-purple), 2px 2px 0 var(--vivid-purple);">t</span><span class="text-[var(--sunflower-yellow)]" style="text-shadow: -2px -2px 0 var(--vivid-purple), 2px -2px 0 var(--vivid-purple), -2px 2px 0 var(--vivid-purple), 2px 2px 0 var(--vivid-purple);">!</span>
-</h1>
 <p class="text-2xl text-[var(--deep-navy-text)] callout max-w-lg mx-auto">Playful, science-driven challenges to sharpen your logic and problem-solving skills.</p>
   <div class="mt-12 flex flex-col sm:flex-row gap-6 justify-center">
     <a class="bg-[var(--sunflower-yellow)] text-[var(--deep-navy)] font-bold py-4 px-10 rounded-full text-xl transform transition-transform duration-300 ease-in-out shadow-lg hover:bg-[var(--bright-orange)] hover:scale-105" href="#community">
-      Join the WhatsApp Community
+      Join the Community
     </a>
     <a class="bg-[var(--electric-blue)] text-white font-bold py-4 px-10 rounded-full text-xl transform transition-transform duration-300 ease-in-out shadow-lg hover:bg-[var(--vivid-purple)] hover:scale-105" href="#newsletter">
-      Subscribe to Newsletter
+      Learn More
     </a>
   </div>
 </div>
@@ -50,8 +47,11 @@
 <section class="py-16 px-6 bg-[var(--white)] text-[var(--deep-navy-text)]">
 <div class="max-w-4xl mx-auto">
 <div class="text-center mb-12">
-<h2 class="text-4xl font-bold tracking-tight text-[var(--vivid-purple)]">About Crackit!</h2>
-<p class="mt-4 text-lg max-w-2xl mx-auto font-['Montserrat']">Ready to train your brain to think sharper, faster, and smarter? Crackit! is your daily dose of fun, science-backed challenges designed to boost your problem-solving superpowers. We're all about making you a better thinker for your exams, your job, and your everyday life. Let's get cracking!</p>
+<h2 class="text-4xl font-bold tracking-tight text-[var(--vivid-purple)]">About</h2>
+<h1 class="text-7xl font-bold text-[var(--white)] crackit-text">
+<span class="text-[var(--electric-blue)]" style="text-shadow: -2px -2px 0 var(--vivid-purple), 2px -2px 0 var(--vivid-purple), -2px 2px 0 var(--vivid-purple), 2px 2px 0 var(--vivid-purple);">C</span><span class="text-[var(--electric-blue)]" style="text-shadow: -2px -2px 0 var(--vivid-purple), 2px -2px 0 var(--vivid-purple), -2px 2px 0 var(--vivid-purple), 2px 2px 0 var(--vivid-purple);">r</span><span class="text-[var(--electric-blue)]" style="text-shadow: -2px -2px 0 var(--viv id-purple), -2px 2px 0 var(--vivid-purple), 2px 2px 0 var(--vivid-purple);">a</span><span class="text-[var(--electric-blue)]" style="text-shadow: -2px -2px 0 var(--vivid-purple), 2px -2px 0 var(--vivid-purple), -2px 2px 0 var(--vivid-purple), 2px 2px 0 var(--vivid-purple);">c</span><span class="text-[var(--electric-blue)]" style="text-shadow: -2px -2px 0 var(--vivid-purple), 2px -2px 0 var(--vivid-purple), -2px 2px 0 var(--vivid-purple), 2px 2px 0 var(--vivid-purple);">k</span><span class="text-[var(--bright-orange)]" style="text-shadow: -2px -2px 0 var(--vivid-purple), 2px -2px 0 var(--vivid-purple), -2px 2px 0 var(--vivid-purple), 2px 2px 0 var(--vivid-purple);">i</span><span class="text-[var(--bright-orange)]" style="text-shadow: -2px -2px 0 var(--vivid-purple), 2px -2px 0 var(--vivid-purple), -2px 2px 0 var(--vivid-purple), 2px 2px 0 var(--vivid-purple);">t</span><span class="text-[var(--sunflower-yellow)]" style="text-shadow: -2px -2px 0 var(--vivid-purple), 2px -2px 0 var(--vivid-purple), -2px 2px 0 var(--vivid-purple), 2px 2px 0 var(--vivid-purple);">!</span>
+</h1>
+<p class="mt-4 text-lg max-w-2xl mx-auto font-['Montserrat']">Ready to train your brain to think sharper, faster, and smarter? Crackit! is your weekly dose of fun challenges designed to boost your problem-solving skills. We're all about making you a better thinker for your exams, your job, and your everyday life. Let's get cracking!</p>
 </div>
 </div>
 </section>
@@ -66,7 +66,7 @@
 <span class="material-symbols-outlined text-white text-4xl"> feed </span>
 </div>
 <h3 class="text-xl font-bold text-[var(--electric-blue)]">Exams &amp; Assessments</h3>
-<p class="text-base mt-2">Nail your GMAT, GRE, job tests, case studies, and aptitude tests with targeted brain-training.</p>
+<p class="text-base mt-2">Ace GMAT, GRE, job tests, case studies, and aptitude tests with targeted resorces and trainings.</p>
 </div>
 <div class="text-center p-6 bg-gray-50 rounded-2xl shadow-sm transition hover:shadow-lg hover:-translate-y-1 text-[var(--deep-navy-text)]">
 <div class="inline-block p-4 bg-[var(--bright-orange)] rounded-full mb-4">
@@ -76,17 +76,17 @@
 <p class="text-base mt-2">Apply science and math principles to conquer everyday challenges with logic and flair.</p>
 </div>
 <div class="text-center p-6 bg-gray-50 rounded-2xl shadow-sm transition hover:shadow-lg hover:-translate-y-1 text-[var(--deep-navy-text)]">
-<div class="inline-block p-4 bg-[var(--sunflower-yellow)] rounded-full mb-4">
+<div class="inline-block p-4 bg-[var(--vivid-purple)] rounded-full mb-4">
 <span class="material-symbols-outlined text-white text-4xl"> mood </span>
 </div>
-<h3 class="text-xl font-bold text-[var(--sunflower-yellow)]">Creative Thinking</h3>
-<p class="text-base mt-2">Spark "aha!" moments with our mix of humor, games, and relatable content.</p>
+<h3 class="text-xl font-bold text-[var(--vivid-purple)]">Analytical Thinking</h3>
+<p class="text-base mt-2">Sharpen your ability to break problems into parts, spot patterns and solve with clarity.</p>
 </div>
 <div class="text-center p-6 bg-gray-50 rounded-2xl shadow-sm transition hover:shadow-lg hover:-translate-y-1 text-[var(--deep-navy-text)]">
-<div class="inline-block p-4 bg-[var(--vivid-purple)] rounded-full mb-4">
+<div class="inline-block p-4 bg-[var(--sunflower-yellow)] rounded-full mb-4">
 <span class="material-symbols-outlined text-white text-4xl"> groups </span>
 </div>
-<h3 class="text-xl font-bold text-[var(--vivid-purple)]">Community Learning</h3>
+<h3 class="text-xl font-bold text-[var(--sunflower-yellow)]">Community Learning</h3>
 <p class="text-base mt-2">Join a tribe of curious minds who love cracking challenges together.</p>
 </div>
 </div>
@@ -99,7 +99,7 @@
 <p class="mt-4 text-lg max-w-2xl mx-auto text-slate-300 callout">Fresh insights to fuel your curiosity.</p>
 </div>
 <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-<a class="block group" href="#">
+<!-- <a class="block group" href="#">
 <div class="bg-[rgba(255,255,255,0.05)] rounded-2xl overflow-hidden transition-all duration-300 hover:bg-[rgba(255,255,255,0.1)] hover:shadow-2xl hover:shadow-[var(--electric-blue)]/20">
 <div class="flex items-center p-4 space-x-4">
 <div class="flex-shrink-0">
@@ -110,8 +110,8 @@
 </div>
 </div>
 </div>
-</a>
-<a class="block group" href="#">
+</a> -->
+<!-- <a class="block group" href="#">
 <div class="bg-[rgba(255,255,255,0.05)] rounded-2xl overflow-hidden transition-all duration-300 hover:bg-[rgba(255,255,255,0.1)] hover:shadow-2xl hover:shadow-[var(--bright-orange)]/20">
 <div class="flex items-center p-4 space-x-4">
 <div class="flex-shrink-0">
@@ -122,8 +122,8 @@
 </div>
 </div>
 </div>
-</a>
-<a class="block group" href="#">
+</a> -->
+<!-- <a class="block group" href="#">
 <div class="bg-[rgba(255,255,255,0.05)] rounded-2xl overflow-hidden transition-all duration-300 hover:bg-[rgba(255,255,255,0.1)] hover:shadow-2xl hover:shadow-[var(--sunflower-yellow)]/20">
 <div class="flex items-center p-4 space-x-4">
 <div class="flex-shrink-0">
@@ -134,7 +134,7 @@
 </div>
 </div>
 </div>
-</a>
+</a> -->
 </div>
 <div class="text-center mt-12">
 <a class="bg-transparent border-2 border-[var(--sunflower-yellow)] text-[var(--sunflower-yellow)] font-bold py-3 px-8 rounded-full text-lg transform hover:scale-105 transition-transform duration-300 ease-in-out hover:bg-[var(--sunflower-yellow)] hover:text-[var(--deep-navy)] shadow-lg hover:shadow-[var(--sunflower-yellow)]/30" href="#"> Explore All Resources </a>
@@ -167,19 +167,19 @@
 <div class="flex flex-col items-center space-y-4">
 <a class="social-icon group flex items-center space-x-3 rounded-full bg-[rgba(255,255,255,0.05)] px-6 py-3 transition-all duration-300 hover:bg-[rgba(255,255,255,0.1)]" href="#">
 <i class="fab fa-instagram text-3xl text-white transition-colors duration-300 group-hover:text-[var(--sunflower-yellow)]"></i>
-<span class="font-bold text-xl text-white transition-colors duration-300 group-hover:text-[var(--sunflower-yellow)]">@CrackitHQ</span>
+<span class="font-bold text-xl text-white transition-colors duration-300 group-hover:text-[var(--sunflower-yellow)]">@Crackit_hq</span>
 </a>
-<a class="social-icon group flex items-center space-x-3 rounded-full bg-[rgba(255,255,255,0.05)] px-6 py-3 transition-all duration-300 hover:bg-[rgba(255,255,255,0.1)]" href="mailto:hello@crackit.co">
+<a class="social-icon group flex items-center space-x-3 rounded-full bg-[rgba(255,255,255,0.05)] px-6 py-3 transition-all duration-300 hover:bg-[rgba(255,255,255,0.1)]" href="mailto:hafsahanibaba@gmail.com">
 <span class="material-symbols-outlined text-3xl text-white transition-colors duration-300 group-hover:text-[var(--sunflower-yellow)]">
                         mail
                     </span>
-<span class="font-bold text-xl text-white transition-colors duration-300 group-hover:text-[var(--sunflower-yellow)]">hello@crackit.co</span>
+<span class="font-bold text-xl text-white transition-colors duration-300 group-hover:text-[var(--sunflower-yellow)]">hafsahanibaba@gmail.com</span>
 </a>
-<a class="social-icon group flex items-center space-x-3 rounded-full bg-[rgba(255,255,255,0.05)] px-6 py-3 transition-all duration-300 hover:bg-[rgba(255,255,255,0.1)]" href="tel:+1234567890">
+<a class="social-icon group flex items-center space-x-3 rounded-full bg-[rgba(255,255,255,0.05)] px-6 py-3 transition-all duration-300 hover:bg-[rgba(255,255,255,0.1)]" href="tel:+2349049120142">
 <span class="material-symbols-outlined text-3xl text-white transition-colors duration-300 group-hover:text-[var(--sunflower-yellow)]">
                         phone
                     </span>
-<span class="font-bold text-xl text-white transition-colors duration-300 group-hover:text-[var(--sunflower-yellow)]">+1 (234) 567-890</span>
+<span class="font-bold text-xl text-white transition-colors duration-300 group-hover:text-[var(--sunflower-yellow)]">+2349049120142</span>
 </a>
 </div>
 <div class="text-center callout text-lg bg-[rgba(255,255,255,0.1)] py-3 px-6 rounded-full shadow-lg mt-8">
