--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 <h2 class="text-4xl font-bold tracking-tight text-[var(--vivid-purple)]">Join the Community</h2>
 <p class="mt-4 text-lg text-slate-600 font-['Montserrat']">Connect with fellow thinkers, get exclusive content, and be the first to know about new challenges.</p>
 <div class="mt-8">
-<a class="bg-[var(--sunflower-yellow)] text-[var(--deep-navy)] font-bold py-4 px-8 rounded-full text-lg transform hover:scale-105 transition-transform duration-300 ease-in-out shadow-lg hover:bg-[var(--bright-orange)]" href="#"> Join our WhatsApp Community </a>
+<a class="bg-[var(--sunflower-yellow)] text-[var(--deep-navy)] font-bold py-4 px-8 rounded-full text-lg transform hover:scale-105 transition-transform duration-300 ease-in-out shadow-lg hover:bg-[var(--bright-orange)]" href="#"> Join Us </a>
 </div>
 </div>
 </section>
