update the page

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
               }
             }
           },
-          animation: {
-            'scroll': 'scroll 20s linear infinite',
-          }
+            animation: {
+            'scroll': 'scroll 50s linear infinite',
+            },
         },
       },
     };
@@ -87,12 +87,12 @@
 <div class="absolute inset-0 bg-deep-blue/80"></div>
 <div class="relative z-10 mx-auto max-w-7xl px-4 py-10 sm:py-20">
 <div class="h-16 w-48 bg-white/20 rounded-lg mx-auto mb-8 flex items-center justify-center">
-<span class="text-white/80 font-heading">BetaEdge Logo</span>
+<img src="https://lh3.googleusercontent.com/aida-public/AB6AXuBfOlQwPT4WWTvfmmlhIoEVj4OMMtEWWgumTm8KPSsi1m2ZJTIGTNTnSnCknFv4N_5QGrD-pLd2PJOtkzJRmAREAwzKGmUS-4zj4rSbq4aTZa6g64dqnj-v-gI_nQCTsWIwGGTk6rvDR398GdD29pmetdY_riSJnSa_FeAgmAAhUbgDTwI_q9lxgCN3Rca0Er5cq6nK2YQEIVd3AsQyg18u6TK3K31jWcSDVbeUqgxhDABArqYqhOs2IiEe5JI89vu7jWL-L-E-WbQ=s200" alt="BetaEdge Logo" class="h-12 mx-auto" />
 </div>
 <div class="text-center">
 <h1 class="font-heading text-4xl leading-tight sm:text-5xl md:text-6xl">Your Key to Career Readiness and Growth</h1>
 <p class="font-tagline mt-4 text-lg sm:text-xl">
-              From campus to corporate, sharpen your edge with test prep, soft skills, and career mentoring.
+              Ace assessments, stay competitive, become indispensable in your career.
             </p>
 <div class="mt-8 flex flex-col items-center justify-center gap-4 sm:flex-row">
 <button class="w-full rounded-lg bg-warm-orange px-8 py-3 font-heading text-deep-blue sm:w-auto">
@@ -108,131 +108,87 @@
 <main>
 <section class="py-16 sm:py-24">
 <div class="mx-auto max-w-7xl px-4">
-<h2 class="font-heading text-3xl text-deep-blue dark:text-white sm:text-4xl">For Students &amp; Young Graduates</h2>
+<h2 class="font-heading text-3xl text-deep-blue dark:text-white sm:text-4xl">Are You?</h2>
 <div class="mt-12 overflow-hidden relative group">
 <div class="flex animate-scroll group-hover:pause">
 <div class="flex-shrink-0 w-[80%] md:w-1/3 mx-3">
 <div class="flex flex-col h-full">
 <div class="h-48 w-full rounded-lg bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBfOlQwPT4WWTvfmmlhIoEVj4OMMtEWWgumTm8KPSsi1m2ZJTIGTNTnSnCknFv4N_5QGrD-pLd2PJOtkzJRmAREAwzKGmUS-4zj4rSbq4aTZa6g64dqnj-v-gI_nQCTsWIwGGTk6rvDR398GdD29pmetdY_riSJnSa_FeAgmAAhUbgDTwI_q9lxgCN3Rca0Er5cq6nK2YQEIVd3AsQyg18u6TK3K31jWcSDVbeUqgxhDABArqYqhOs2IiEe5JI89vu7jWL-L-E-WbQ");'></div>
-<h3 class="font-heading mt-6 text-xl text-emerald-green">Before</h3>
-<p class="mt-2 text-text-light dark:text-text-muted-dark">Navigating the transition from academia to the professional world can be daunting. We provide the foundational skills and knowledge to help you stand out.</p>
+<h3 class="font-heading mt-6 text-xl text-emerald-green">Applying to competitive scholarships, admissions, or entry-level jobs?</h3>
+<p class="mt-2 text-text-light dark:text-text-muted-dark">Struggling with aptitude tests? Nervous about interviews? Feeling unprepared for workplace readiness?</p>
 </div>
 </div>
 <div class="flex-shrink-0 w-[80%] md:w-1/3 mx-3">
 <div class="flex flex-col h-full">
 <div class="h-48 w-full rounded-lg bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDDO5jXTUJ7BxPT_0btXCGO-87TSZMLwHEQPvoLJVc_6S5qFPoJj3cgBnmttfICV72aK4H1ebqxqFGvF_KJBaU0U5kAUGijI8Bw12TWTcMchhbhseqVlhhvf_PUCpTM3CCYBBmZ6aYdzVjjMR7mDCSazaeOlqPpswx_9L0FnOsK7v9STBP8OPuG1X_bPfZ5yHTD0sNFU1EiHSMgKx6PUsx_yf8xLeRLWrfnd77ohk4oxdZL_es2aegS5e0_MYN1EgjiJYwB3bs3JsA");'></div>
-<h3 class="font-heading mt-6 text-xl text-emerald-green">After</h3>
-<p class="mt-2 text-text-light dark:text-text-muted-dark">Equipped with the right tools and mindset, you'll be ready to tackle any challenge and achieve your career aspirations.</p>
+<h3 class="font-heading mt-6 text-xl text-emerald-green">Already working but unsure if you’re making real impact?</h3>
+<p class="mt-2 text-text-light dark:text-text-muted-dark">Missing the collaboration, communication, and productivity skills that set you apart at work?</p>
 </div>
 </div>
 <div class="flex-shrink-0 w-[80%] md:w-1/3 mx-3">
 <div class="flex flex-col h-full">
 <div class="h-48 w-full rounded-lg bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuB-h5KUYuN-KQbqkSG_wbpKhFyo2BhtjV-DgX0Ydk6YkoKVo1ACVDVi-u5Y77t7Pv2ueM1rF5aQvSDpZvbBA2Ngl3eFtF1-GgUmAnLEat70TPRvsfTC1KCYVMfy41TVMJR-4GD-h1PDeBjjvsInjF8-0A7fZCASdQ5jRAboBi34MfxejG-DeCsOtv3_hiM_a2MBsB1WkO6Os-2SVmJoi_qczkTjpq_MjZLUuw94Gv3GSj3xP1dabwgwtR1StZLkJw_dvKg9Hnz1qNI");'></div>
-<h3 class="font-heading mt-6 text-xl text-emerald-green">Bridge</h3>
-<p class="mt-2 text-text-light dark:text-text-muted-dark">We bridge the gap between your current skills and the demands of the job market, ensuring a smooth and successful transition.</p>
+<h3 class="font-heading mt-6 text-xl text-emerald-green">Leading a team where members lack essential workplace skills?</h3>
+<p class="mt-2 text-text-light dark:text-text-muted-dark">Watching progress stall because your workforce isn’t job-ready?</p>
 </div>
 </div>
 <div class="flex-shrink-0 w-[80%] md:w-1/3 mx-3">
 <div class="flex flex-col h-full">
 <div class="h-48 w-full rounded-lg bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBfOlQwPT4WWTvfmmlhIoEVj4OMMtEWWgumTm8KPSsi1m2ZJTIGTNTnSnCknFv4N_5QGrD-pLd2PJOtkzJRmAREAwzKGmUS-4zj4rSbq4aTZa6g64dqnj-v-gI_nQCTsWIwGGTk6rvDR398GdD29pmetdY_riSJnSa_FeAgmAAhUbgDTwI_q9lxgCN3Rca0Er5cq6nK2YQEIVd3AsQyg18u6TK3K31jWcSDVbeUqgxhDABArqYqhOs2IiEe5JI89vu7jWL-L-E-WbQ");'></div>
-<h3 class="font-heading mt-6 text-xl text-emerald-green">Before</h3>
-<p class="mt-2 text-text-light dark:text-text-muted-dark">Navigating the transition from academia to the professional world can be daunting. We provide the foundational skills and knowledge to help you stand out.</p>
+<h3 class="font-heading mt-6 text-xl text-emerald-green">Applying to competitive scholarships, admissions, or entry-level jobs?</h3>
+<p class="mt-2 text-text-light dark:text-text-muted-dark">Struggling with aptitude tests? Nervous about interviews? Feeling unprepared for workplace readiness?</p>
 </div>
 </div>
 </div>
-</div>
-<div class="mt-12 text-center">
-<button class="rounded-lg bg-emerald-green px-8 py-3 font-heading text-white">Explore Student Programs</button>
 </div>
 </div>
 </section>
 <section class="bg-light-grey dark:bg-deep-blue/20 py-16 sm:py-24">
 <div class="mx-auto max-w-7xl px-4">
-<h2 class="font-heading text-3xl text-deep-blue dark:text-white sm:text-4xl">For Entry-Level Professionals</h2>
+<h2 class="font-heading text-3xl text-deep-blue dark:text-white sm:text-4xl">BetaEdge</h2>
 <div class="mt-12 overflow-hidden relative group">
 <div class="flex animate-scroll group-hover:pause">
 <div class="flex-shrink-0 w-[80%] md:w-1/3 mx-3">
 <div class="flex flex-col h-full">
 <div class="h-48 w-full rounded-lg bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCrfclMfqXPPo5WWM5pkM7S3Do9B9Yqn4ANJscYHVrjXkc0stYD0IasCYLuHB_dMfKqvfBEHDUWfa3rGcof8gM82ljjBvdh2UM69OqGqOW2FfRWZl1K7XHwwD-a88sMvvZy0JK9zLpg6ovmuDMSxDGSnDv1gY3aUwpq1imDElRICGXM6FFUlT0NIC4P10phg48qG4Ns3vV1Y7jLAPBsJHAb7FpbKo4Hk_b72zBB-CTCTYLySf03DGh2lrPKEoxnMiTRkTYgyNyB110");'></div>
-<h3 class="font-heading mt-6 text-xl text-warm-orange">Before</h3>
-<p class="mt-2 text-text-light dark:text-text-muted-dark">You've taken the first step, but the journey continues. We help you identify your strengths and areas for growth to accelerate your career.</p>
+<h3 class="font-heading mt-6 text-xl text-primary">For Students & Recent Graduates:</h3>
+<p class="mt-2 text-text-light dark:text-text-muted-dark">Gives you affordable bootcamps, one-on-one mentoring, and a supportive community to help you ace assessments and unlock opportunities.</p>
 </div>
 </div>
 <div class="flex-shrink-0 w-[80%] md:w-1/3 mx-3">
 <div class="flex flex-col h-full">
 <div class="h-48 w-full rounded-lg bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAo5wnx68B7HpowzBFWphh-uXjtKCMTtrcDAFAF532MTLMlEOOxq1AIIAn__ywZffqKP3wdVdA2BXJABRFwWktd6NRf32J1TFrOQhugF7SlU3V2FFGRUGYAWs3AjR46dlFypPaUoNNf4eveA8ENsQc9vRYNC7pBCQsL-PrX2yI5JKzPSuqggvnN2elFzVAWUsZbhz9Z9vX-Q11ESfbeGlMCJ6hobMQQfhyy0K7Loh0QXkM0DKfuXebv7h6wlZWRaTIWi4fUT6BqbSs");'></div>
-<h3 class="font-heading mt-6 text-xl text-warm-orange">After</h3>
-<p class="mt-2 text-text-light dark:text-text-muted-dark">With enhanced skills and a strategic approach, you'll be poised for promotions and new opportunities.</p>
+<h3 class="font-heading mt-6 text-xl text-primary">For Professionals:</h3>
+<p class="mt-2 text-text-light dark:text-text-muted-dark">Helps you sharpen collaboration, communication, and productivity skills so you can thrive and become indispensable in your career.</p>
 </div>
 </div>
 <div class="flex-shrink-0 w-[80%] md:w-1/3 mx-3">
 <div class="flex flex-col h-full">
 <div class="h-48 w-full rounded-lg bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDrMHZJ6e0NdcyZWgDgRc3SNEDHpy03DV9KNu7lMu7xsH9jTbXK9bHDXYyARIaqKuW1myq5TU5GH5h9pShLOay-oelW7D2dkWY2NFIhGC4XE4QsHts83dDPyP6gdbqOExvKQjSWY3vUJm5RPEM_bQsei_DInNRg-07D65anM5hsVaa7pL7zySQuI3OgFGO29enLbNLd775FigTVxXKPgIx4IgTfMqZcDqTz0FJS1Odsdv1ADcPY_6dlgM6FRm0lMhpJ6quXNvpPj-k");'></div>
-<h3 class="font-heading mt-6 text-xl text-warm-orange">Bridge</h3>
-<p class="mt-2 text-text-light dark:text-text-muted-dark">We bridge the gap between your current role and your desired career path, providing the support and guidance you need to succeed.</p>
+<h3 class="font-heading mt-6 text-xl text-primary">For Organisations:</h3>
+<p class="mt-2 text-text-light dark:text-text-muted-dark">esigns tailored upskilling programs that transform raw talent into measurable impact, boosting team performance and productivity.</p>
 </div>
 </div>
 <div class="flex-shrink-0 w-[80%] md:w-1/3 mx-3">
 <div class="flex flex-col h-full">
 <div class="h-48 w-full rounded-lg bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCrfclMfqXPPo5WWM5pkM7S3Do9B9Yqn4ANJscYHVrjXkc0stYD0IasCYLuHB_dMfKqvfBEHDUWfa3rGcof8gM82ljjBvdh2UM69OqGqOW2FfRWZl1K7XHwwD-a88sMvvZy0JK9zLpg6ovmuDMSxDGSnDv1gY3aUwpq1imDElRICGXM6FFUlT0NIC4P10phg48qG4Ns3vV1Y7jLAPBsJHAb7FpbKo4Hk_b72zBB-CTCTYLySf03DGh2lrPKEoxnMiTRkTYgyNyB110");'></div>
-<h3 class="font-heading mt-6 text-xl text-warm-orange">Before</h3>
-<p class="mt-2 text-text-light dark:text-text-muted-dark">You've taken the first step, but the journey continues. We help you identify your strengths and areas for growth to accelerate your career.</p>
+<h3 class="font-heading mt-6 text-xl text-primary">For Students & Recent Graduates:</h3>
+<p class="mt-2 text-text-light dark:text-text-muted-dark">Gives you affordable bootcamps, one-on-one mentoring, and a supportive community to help you ace assessments and unlock opportunities.</p>
 </div>
 </div>
 </div>
 </div>
 <div class="mt-12 text-center">
-<button class="rounded-lg bg-warm-orange px-8 py-3 font-heading text-deep-blue">Advance Your Career</button>
+<button class="rounded-lg bg-warm-orange px-8 py-3 font-heading text-deep-blue">Get Started</button>
 </div>
 </div>
 </section>
-<section class="py-16 sm:py-24">
-<div class="mx-auto max-w-7xl px-4">
-<h2 class="font-heading text-3xl text-deep-blue dark:text-white sm:text-4xl">For Corporates</h2>
-<div class="mt-12 overflow-hidden relative group">
-<div class="flex animate-scroll group-hover:pause">
-<div class="flex-shrink-0 w-[80%] md:w-1/3 mx-3">
-<div class="flex flex-col h-full">
-<div class="h-48 w-full rounded-lg bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAnX0MkCK5D_ZXeY-NpTikQ6hcIoyEFCM2MZ_iseybSOdBfsxWeF6lSzExPd7YypU8ocaEnJQKUMaa7YKH_dVR7wN79zGFSe3Li55gfJb18clx88VKlPtS-tBFJoMxoH1EmKA8EODQNZIDm1K4vU14zwRfjq-TFc8ek_Z-j1CQE0WzMlqwQoMZ4rUjfwslVOIQ1wlpf1xpq5KCkXvKan-XqPdjzr2eFMZ3PB-BBZpWF-0KjX_iS2ZdUmC-cWdVw2qqVHlcj35OL48I");'></div>
-<h3 class="font-heading mt-6 text-xl text-primary">Before</h3>
-<p class="mt-2 text-text-light dark:text-text-muted-dark">Your team's potential is untapped. We provide customized training solutions to enhance their skills and performance.</p>
-</div>
-</div>
-<div class="flex-shrink-0 w-[80%] md:w-1/3 mx-3">
-<div class="flex flex-col h-full">
-<div class="h-48 w-full rounded-lg bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDzaPuryGcMmB1qd2PKAsZrygvHSPaNWZH5wO-w123QZ_mJzJoRp0_cg6w7XyFRKpHgWDGYMhII0ofyVGjRkHo7JNh73UqwgdXnmpHy3EpCAyCXdrmi6FTMsdvukZPSXFwOnA8Ukql2jmH1-8OpxfURtVyUpQ0xQ3PLHp-BTl7PgeMvIyKCGSZxXlqDn9FYX1PsPdfx2NJ3xgxRaP8fNssiDTGBbf4MwSqkMQPaYMtuEW6iOyPJPmXdTHA_TkL1_gq4NbEvYliNfgY");'></div>
-<h3 class="font-heading mt-6 text-xl text-primary">After</h3>
-<p class="mt-2 text-text-light dark:text-text-muted-dark">A highly skilled and motivated workforce drives innovation and achieves business objectives.</p>
-</div>
-</div>
-<div class="flex-shrink-0 w-[80%] md:w-1/3 mx-3">
-<div class="flex flex-col h-full">
-<div class="h-48 w-full rounded-lg bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDWxNzO3HcQTbV_iiwHCGtJlroYpodCf8l8yxJZmhRsbvuW7c9ovPi925-COBRxNgc6jXURnUp6AyQcWpudOW-RpBHlA5pmETL8ExH8germG-LKnLf2N6kYIydjYX5Ys3gz__YCu_cvOi-LDpWcCXJFmo-V26X3DPPlP_1BSDRijcabrvTLRg2TN3-gDCe1YnyghiXrzelo46M6Rr-YyTqrS66IGGiLaz02sNQa_FOvRCSNPlS-6pdlsI1fNqvkTGzIY8g6tiO5D3M");'></div>
-<h3 class="font-heading mt-6 text-xl text-primary">Bridge</h3>
-<p class="mt-2 text-text-light dark:text-text-muted-dark">We bridge the gap between your current team capabilities and your organizational goals, fostering a culture of continuous learning and growth.</p>
-</div>
-</div>
-<div class="flex-shrink-0 w-[80%] md:w-1/3 mx-3">
-<div class="flex flex-col h-full">
-<div class="h-48 w-full rounded-lg bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAnX0MkCK5D_ZXeY-NpTikQ6hcIoyEFCM2MZ_iseybSOdBfsxWeF6lSzExPd7YypU8ocaEnJQKUMaa7YKH_dVR7wN79zGFSe3Li55gfJb18clx88VKlPtS-tBFJoMxoH1EmKA8EODQNZIDm1K4vU14zwRfjq-TFc8ek_Z-j1CQE0WzMlqwQoMZ4rUjfwslVOIQ1wlpf1xpq5KCkXvKan-XqPdjzr2eFMZ3PB-BBZpWF-0KjX_iS2ZdUmC-cWdVw2qqVHlcj35OL48I");'></div>
-<h3 class="font-heading mt-6 text-xl text-primary">Before</h3>
-<p class="mt-2 text-text-light dark:text-text-muted-dark">Your team's potential is untapped. We provide customized training solutions to enhance their skills and performance.</p>
-</div>
-</div>
-</div>
-</div>
-<div class="mt-12 text-center">
-<button class="rounded-lg bg-primary px-8 py-3 font-heading text-white">Corporate Training Solutions</button>
-</div>
-</div>
-</section>
+
 <section class="bg-light-grey dark:bg-deep-blue/20 py-16 sm:py-24">
 <div class="mx-auto max-w-7xl px-4">
 <h2 class="font-heading text-center text-3xl text-deep-blue dark:text-white sm:text-4xl">Our Services</h2>
 <div class="mt-12">
-<h3 class="font-heading text-2xl text-deep-blue dark:text-white sm:text-3xl">Monetized Services</h3>
-<p class="mt-2 text-text-light dark:text-text-muted-dark">Invest in your future with our comprehensive programs.</p>
-<div class="mt-8 grid gap-8 sm:grid-cols-2 lg:grid-cols-4">
+<div class="mt-8 grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
 <div class="rounded-lg border border-gray-300 dark:border-gray-700 bg-white dark:bg-background-dark p-6 text-center">
 <span class="material-symbols-outlined text-4xl text-warm-orange">school</span>
 <h4 class="font-heading mt-4 text-lg">Bootcamps</h4>
@@ -242,26 +198,20 @@
 <h4 class="font-heading mt-4 text-lg">One-on-One Coaching</h4>
 </div>
 <div class="rounded-lg border border-gray-300 dark:border-gray-700 bg-white dark:bg-background-dark p-6 text-center">
-<span class="material-symbols-outlined text-4xl text-warm-orange">book_2</span>
-<h4 class="font-heading mt-4 text-lg">Learning Materials</h4>
-</div>
-<div class="rounded-lg border border-gray-300 dark:border-gray-700 bg-white dark:bg-background-dark p-6 text-center">
 <span class="material-symbols-outlined text-4xl text-warm-orange">business_center</span>
 <h4 class="font-heading mt-4 text-lg">Corporate Packages</h4>
 </div>
 </div>
 </div>
 <div class="mt-16">
-<h3 class="font-heading text-2xl text-deep-blue dark:text-white sm:text-3xl">Free/Impact Services</h3>
-<p class="mt-2 text-text-light dark:text-text-muted-dark">Access valuable resources and connect with our community.</p>
 <div class="mt-8 grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
 <div class="rounded-lg border border-gray-300 dark:border-gray-700 bg-white dark:bg-background-dark p-6 text-center">
 <span class="material-symbols-outlined text-4xl text-emerald-green">smart_display</span>
-<h4 class="font-heading mt-4 text-lg">Webinars</h4>
+<h4 class="font-heading mt-4 text-lg">Live Master Classes</h4>
 </div>
 <div class="rounded-lg border border-gray-300 dark:border-gray-700 bg-white dark:bg-background-dark p-6 text-center">
-<span class="material-symbols-outlined text-4xl text-emerald-green">campaign</span>
-<h4 class="font-heading mt-4 text-lg">Awareness Content</h4>
+<span class="material-symbols-outlined text-4xl text-emerald-green">book_2</span>
+<h4 class="font-heading mt-4 text-lg">Learning Materials</h4>
 </div>
 <div class="rounded-lg border border-gray-300 dark:border-gray-700 bg-white dark:bg-background-dark p-6 text-center">
 <span class="material-symbols-outlined text-4xl text-emerald-green">groups</span>
