--- a/index.html
+++ b/index.html
@@ -223,8 +223,7 @@
 </section>
 <section class="py-16 sm:py-24">
 <div class="mx-auto max-w-7xl px-4">
-<h2 class="font-heading text-center text-3xl text-deep-blue dark:text-white sm:text-4xl">Why Choose BetaEdge?</h2>
-<p class="mt-4 text-center text-text-light dark:text-text-muted-dark">Our Unique Selling Points</p>
+<h2 class="font-heading text-center text-3xl text-deep-blue dark:text-white sm:text-4xl">BetaEdge is:</h2>
 <div class="mt-12 grid gap-8 sm:grid-cols-2 lg:grid-cols-4">
 <div class="text-center">
 <span class="material-symbols-outlined text-5xl text-primary">location_on</span>
