--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
 <body class="bg-background-light dark:bg-background-dark font-body text-text-light dark:text-text-dark">
 <div class="relative min-h-screen w-full flex-col justify-between overflow-x-hidden">
 <header class="relative text-white">
-<div class="absolute inset-0 bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCcd9-vFWsRfWviSGL-s-D0tWvHesnDUZ5L44_O9mgRdIpQ5q1N-VWohIGVgTUjD8SmMzfLoI3wjjSga24-3XPr3VH1fcm9jP7zDVI0XJkkny12N3syZ52x9KNdBH6LfPsu1d-EH-DBgameKaxn1n5JjYKytBFY0bawJPLQhG6iXoIPguERD053Q6u0yzRFsowi1bBHAA0S3FZyiwV1I6JIpGdVM_uesPpSup0WUT15mNzTptXXi7ueA93TZOmrw1W5YXrgYrvSysM");'></div>
+<div class="absolute inset-0 bg-cover bg-center" style='background-image: url("assets/hero-bg.jpg");'></div>
 <div class="absolute inset-0 bg-deep-blue/80"></div>
 <div class="relative z-10 mx-auto max-w-7xl px-4 py-10 sm:py-20">
 <div class="h-16 w-48 bg-white/20 rounded-lg mx-auto mb-8 flex items-center justify-center">
-<img src="https://lh3.googleusercontent.com/aida-public/AB6AXuBfOlQwPT4WWTvfmmlhIoEVj4OMMtEWWgumTm8KPSsi1m2ZJTIGTNTnSnCknFv4N_5QGrD-pLd2PJOtkzJRmAREAwzKGmUS-4zj4rSbq4aTZa6g64dqnj-v-gI_nQCTsWIwGGTk6rvDR398GdD29pmetdY_riSJnSa_FeAgmAAhUbgDTwI_q9lxgCN3Rca0Er5cq6nK2YQEIVd3AsQyg18u6TK3K31jWcSDVbeUqgxhDABArqYqhOs2IiEe5JI89vu7jWL-L-E-WbQ=s200" alt="BetaEdge Logo" class="h-12 mx-auto" />
+<img src="assets\images\logo.png" alt="BetaEdge Logo" class="h-12 mx-auto" />
 </div>
 <div class="text-center">
 <h1 class="font-heading text-4xl leading-tight sm:text-5xl md:text-6xl">Your Key to Career Readiness and Growth</h1>
