scroll start time

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                 transform: 'translateX(calc(-250px * 3))'
               }
             }
-          },
+            },
             animation: {
-            'scroll': 'scroll 40s linear infinite',
+            'scroll': 'scroll 40s linear infinite paused',
             },
         },
       },
