--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
               '100%': {
                 transform: 'translateX(calc(-250px * 3))'
               }
-            }
-            },
-            animation: {
-            'scroll': 'scroll 40s linear infinite paused',
-            },
+          }
+        },
+        animation: {
+          scroll: "scroll 25s linear infinite",
         },
       },
-    };
-  </script>
+    },
+  };
+</script>
 <style>
     .font-heading {
       font-family: "Montserrat",
@@ -139,6 +139,20 @@
 <p class="mt-2 text-text-light dark:text-text-muted-dark">Struggling with aptitude tests? Nervous about interviews? Feeling unprepared for workplace readiness?</p>
 </div>
 </div>
+<div class="flex-shrink-0 w-[80%] md:w-1/3 mx-3">
+<div class="flex flex-col h-full">
+<div class="h-48 w-full rounded-lg bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDDO5jXTUJ7BxPT_0btXCGO-87TSZMLwHEQPvoLJVc_6S5qFPoJj3cgBnmttfICV72aK4H1ebqxqFGvF_KJBaU0U5kAUGijI8Bw12TWTcMchhbhseqVlhhvf_PUCpTM3CCYBBmZ6aYdzVjjMR7mDCSazaeOlqPpswx_9L0FnOsK7v9STBP8OPuG1X_bPfZ5yHTD0sNFU1EiHSMgKx6PUsx_yf8xLeRLWrfnd77ohk4oxdZL_es2aegS5e0_MYN1EgjiJYwB3bs3JsA");'></div>
+<h3 class="font-heading mt-6 text-xl text-emerald-green">Already working but unsure if you’re making real impact?</h3>
+<p class="mt-2 text-text-light dark:text-text-muted-dark">Missing the collaboration, communication, and productivity skills that set you apart at work?</p>
+</div>
+</div>
+<div class="flex-shrink-0 w-[80%] md:w-1/3 mx-3">
+<div class="flex flex-col h-full">
+<div class="h-48 w-full rounded-lg bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuB-h5KUYuN-KQbqkSG_wbpKhFyo2BhtjV-DgX0Ydk6YkoKVo1ACVDVi-u5Y77t7Pv2ueM1rF5aQvSDpZvbBA2Ngl3eFtF1-GgUmAnLEat70TPRvsfTC1KCYVMfy41TVMJR-4GD-h1PDeBjjvsInjF8-0A7fZCASdQ5jRAboBi34MfxejG-DeCsOtv3_hiM_a2MBsB1WkO6Os-2SVmJoi_qczkTjpq_MjZLUuw94Gv3GSj3xP1dabwgwtR1StZLkJw_dvKg9Hnz1qNI");'></div>
+<h3 class="font-heading mt-6 text-xl text-emerald-green">Leading a team where members lack essential workplace skills?</h3>
+<p class="mt-2 text-text-light dark:text-text-muted-dark">Watching progress stall because your workforce isn’t job-ready?</p>
+</div>
+</div>
 </div>
 </div>
 </div>
@@ -166,7 +180,7 @@
 <div class="flex flex-col h-full">
 <div class="h-48 w-full rounded-lg bg-cover bg-center" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDrMHZJ6e0NdcyZWgDgRc3SNEDHpy03DV9KNu7lMu7xsH9jTbXK9bHDXYyARIaqKuW1myq5TU5GH5h9pShLOay-oelW7D2dkWY2NFIhGC4XE4QsHts83dDPyP6gdbqOExvKQjSWY3vUJm5RPEM_bQsei_DInNRg-07D65anM5hsVaa7pL7zySQuI3OgFGO29enLbNLd775FigTVxXKPgIx4IgTfMqZcDqTz0FJS1Odsdv1ADcPY_6dlgM6FRm0lMhpJ6quXNvpPj-k");'></div>
 <h3 class="font-heading mt-6 text-xl text-primary">For Organisations:</h3>
-<p class="mt-2 text-text-light dark:text-text-muted-dark">esigns tailored upskilling programs that transform raw talent into measurable impact, boosting team performance and productivity.</p>
+<p class="mt-2 text-text-light dark:text-text-muted-dark">Designs tailored upskilling programs that transform raw talent into measurable impact, boosting team performance and productivity.</p>
 </div>
 </div>
 <div class="flex-shrink-0 w-[80%] md:w-1/3 mx-3">
@@ -267,7 +281,7 @@
 </main>
 <footer class="bg-light-grey dark:bg-deep-blue/20 py-8">
 <div class="mx-auto max-w-7xl px-4 text-center text-text-muted-light dark:text-text-muted-dark">
-<p>© 2024 BetaEdge. All rights reserved.</p>
+<p>© 2025 BetaEdge. All rights reserved.</p>
 <div class="mt-4 flex justify-center space-x-6">
 <a class="hover:text-primary dark:hover:text-warm-orange" href="#">
 <svg aria-hidden="true" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
